[gd_scene load_steps=3 format=2]

[ext_resource path="res://Code/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menus/GeneralTheme.tres" type="Theme" id=8]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.196078, 0.145098, 0.537255 )

[node name="HighlightedOptions" type="ColorRect" parent="."]
process_priority = -2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -100.0
margin_right = 75.0
margin_bottom = 100.0
color = Color( 0.219608, 0.239216, 0.396078, 0.866667 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 478.0
margin_top = 239.0
margin_right = 545.0
margin_bottom = 360.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 67.0
margin_bottom = 17.0
theme = ExtResource( 8 )
text = "PAUSED"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 67.0
margin_bottom = 46.0
rect_min_size = Vector2( 5, 25 )

[node name="ResumeGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 67.0
margin_bottom = 70.0
text = "Resume"

[node name="Menu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 67.0
margin_bottom = 94.0
text = "Menu"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 67.0
margin_bottom = 121.0
theme = ExtResource( 8 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeGame" to="." method="_on_ResumeGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Menu" to="." method="_on_StartNewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
